2006-08-06  Brian Warner  <warner@lothar.com>

	* buildbot/process/step.py (LoggedRemoteCommand.useLog): allow
	callers to provide the slave-side logfile name, rather than
	forcing it to come from the local name of the LogFile.
	(BuildStep.getSlaveName): new method
	* buildbot/process/base.py (Build.getSlaveName): new method, so
	steps can find out which buildslave they're running on

	* buildbot/test/test_steps.py (Version.checkCompare): oops, update
	to match the s/cvs_ver/command_version/ change

2006-08-05  Brian Warner  <warner@lothar.com>

	* buildbot/slave/commands.py (command_version): replace the CVS
	auto-updated cvs_ver keyword with a manually-updated variable,
	since CVS is no longer the master repository. Add a description of
	the remote API change starting in this version (2.1), specifically
	the fact that SlaveShellCommand now accepts 'initial_stdin',
	'keep_stdin_open', and 'logfiles'.

2006-07-31  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (System Architecture): Finally add lots of
	diagrams to describe how the whole system fits together. The
	images themselves are kept in SVG files, with ascii-art versions
	in corresponding .txt files. Texinfo knows how to interpolate the
	text version into .info files, reference the .png versions from
	.html files, and include .eps versions in the .ps format.
	* docs/images/Makefile: tools to create .png and .eps
	* docs/images/*.svg: created pictures with Inkscape.
	* .darcs-boring: ignore the generated .eps and .png files

2006-07-24  Brian Warner  <warner@lothar.com>

	* buildbot/master.py (BuildMaster.loadConfig): check for duplicate
	Scheduler names, since they cause setServiceParent to explode
	later.
	* buildbot/test/test_config.py (ConfigTest._testSchedulers_7): test it

2006-07-20  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: simplify the sample BuildFactory,
	which runs the buildbot unit tests

	* docs/buildbot.texinfo (Index of Useful Classes): add a table of