@@ -1,9 +1,18 @@
 2006-08-06  Brian Warner  <warner@lothar.com>
 
+	* buildbot/process/step.py (LoggingBuildStep.startCommand):
+	refactor command-completion handling, to allow methods like
+	commandComplete/createSummary/evaluateCommand to return Deferreds.
+	(LoggingBuildStep._commandComplete): delete the refactored method
+	(ShellCommand.setupLogfiles): if the buildslave is too old to
+	understand logfiles=, put a warning message both into twistd.log
+	and into the otherwise empty user-visible LogFiles.
+
 	* buildbot/process/step.py (LoggedRemoteCommand.useLog): allow
 	callers to provide the slave-side logfile name, rather than
 	forcing it to come from the local name of the LogFile.
 	(BuildStep.getSlaveName): new method
+
 	* buildbot/process/base.py (Build.getSlaveName): new method, so
 	steps can find out which buildslave they're running on
 
